--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js": ["jquery-1.9.1.min.js", "contentscript.js"]
+      "js": ["jquery-1.9.1.min.js", "contentscript.js", "bootstrap.min.js"]
     }
   ],
 
