--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "version": "0.1", 
 
   "browser_action": {
-    "default_icon": "icon.png", 
+    "default_icon": "icon48.png", 
     "default_popup": "popup.html"
   }, 
 
